// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`contentOrder renders 0 1`] = `
Array [
  .c0 {
  content-order: 0;
}

<div
    className="c0"
  />,
  .c0 {
  content-order: 0;
}

<div
    className="c0"
  />,
  .c0 {
  content-order: 0;
}

<div
    className="c0"
  />,
  .c0 {
  content-order: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`contentOrder renders function 1`] = `
Array [
  .c0 {
  content-order: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  content-order: has;
}

<div
    className="c0"
  />,
  .c0 {
  content-order: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  content-order: has;
}

<div
    className="c0"
  />,
]
`;

exports[`contentOrder renders invalid theme path 1`] = `
Array [
  .c0 {
  content-order: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  content-order: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  content-order: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  content-order: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`contentOrder renders negative number 1`] = `
Array [
  .c0 {
  content-order: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  content-order: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  content-order: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  content-order: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`contentOrder renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    content-order: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    content-order: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    content-order: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    content-order: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    content-order: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    content-order: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    content-order: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    content-order: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    content-order: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    content-order: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    content-order: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    content-order: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    content-order: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    content-order: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    content-order: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    content-order: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`contentOrder renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    content-order: July;
  }
}

@media April {
  .c0 {
    content-order: August;
  }
}

@media January {
  .c0 {
    content-order: September;
  }
}

@media April {
  .c0 {
    content-order: November;
  }
}

@media June {
  .c0 {
    content-order: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    content-order: July;
  }
}

@media April {
  .c0 {
    content-order: August;
  }
}

@media January {
  .c0 {
    content-order: September;
  }
}

@media April {
  .c0 {
    content-order: November;
  }
}

@media June {
  .c0 {
    content-order: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    content-order: January;
  }
}

@media April {
  .c0 {
    content-order: December;
  }
}

@media January {
  .c0 {
    content-order: April;
  }
}

@media April {
  .c0 {
    content-order: May;
  }
}

@media June {
  .c0 {
    content-order: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    content-order: January;
  }
}

@media April {
  .c0 {
    content-order: December;
  }
}

@media January {
  .c0 {
    content-order: April;
  }
}

@media April {
  .c0 {
    content-order: May;
  }
}

@media June {
  .c0 {
    content-order: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`contentOrder renders postitive number 1`] = `
Array [
  .c0 {
  content-order: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  content-order: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  content-order: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  content-order: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`contentOrder renders string 1`] = `
Array [
  .c0 {
  content-order: July;
}

<div
    className="c0"
  />,
  .c0 {
  content-order: July;
}

<div
    className="c0"
  />,
  .c0 {
  content-order: June;
}

<div
    className="c0"
  />,
  .c0 {
  content-order: June;
}

<div
    className="c0"
  />,
]
`;

exports[`contentOrder renders valid theme path 1`] = `
Array [
  .c0 {
  content-order: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  content-order: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  content-order: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  content-order: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
